@@ -1,425 +1,213 @@
-# SpringBoot DDD 架构开发规范
+# taotao-cloud-sys — SpringBoot DDD 系统中心服务
 
 ## 项目架构概述
 
-本项目采用 **领域驱动设计（DDD）** 分层架构，严格遵循六边形架构思想。
+系统中心 DDD 单体服务，提供系统基础能力：用户管理、RBAC 权限、组织架构、字典管理、文件管理、区域管理、系统配置、日志审计、国际化(i18n)、敏感词、拼音、消息通知等。
 
-### 包结构规范（必须遵守）
-com.company.product/
-├── domain/ # 领域层（核心业务逻辑）
-│ ├── model/ # 领域模型
-│ │ ├── aggregate/ # 聚合根
-│ │ │ └── order/
-│ │ │ ├── Order.java # 聚合根
-│ │ │ ├── OrderItem.java # 实体
-│ │ │ └── OrderStatus.java # 值对象
-│ │ ├── valueobject/ # 值对象
-│ │ │ ├── Money.java
-│ │ │ ├── Address.java
-│ │ │ └── Email.java
-│ │ └── event/ # 领域事件
-│ │ ├── OrderCreatedEvent.java
-│ │ └── OrderPaidEvent.java
-│ ├── service/ # 领域服务
-│ │ └── PricingService.java
-│ ├── repository/ # 仓储接口
-│ │ └── OrderRepository.java
-│ ├── specification/ # 规格模式
-│ │ └── OrderSpecification.java
-│ └── factory/ # 工厂
-│ └── OrderFactory.java
-├── application/ # 应用层（用例编排）
-│ ├── service/ # 应用服务
-│ │ ├── OrderApplicationService.java
-│ │ └── dto/ # 应用层DTO
-│ │ ├── CreateOrderCommand.java
-│ │ └── OrderDto.java
-│ ├── port/ # 端口（入站/出站）
-│ │ ├── inbound/ # 入站端口（API接口）
-│ │ │ └── OrderUseCase.java
-│ │ └── outbound/ # 出站端口（SPI接口）
-│ │ ├── PaymentPort.java
-│ │ └── NotificationPort.java
-│ └── handler/ # 事件处理器
-│ └── OrderEventHandler.java
-├── infrastructure/ # 基础设施层
-│ ├── repository/ # 仓储实现
-│ │ ├── JpaOrderRepository.java
-│ │ └── mapper/ # ORM映射
-│ │ └── OrderMapper.java
-│ ├── config/ # 配置
-│ │ ├── BeanConfiguration.java
-│ │ └── JpaConfiguration.java
-│ └── adapter/ # 适配器
-│ ├── payment/ # 支付适配器
-│ │ └── AlipayAdapter.java
-│ └── notification/ # 通知适配器
-│ └── SmsAdapter.java
-└── interfaces/ # 接口层
-├── rest/ # REST API
-│ ├── OrderController.java
-│ └── dto/ # REST DTO
-│ ├── OrderRequest.java
-│ └── OrderResponse.java
-└── message/ # 消息监听
-└── OrderMessageListener.java
+严格遵循 **六边形架构 + 领域驱动设计（DDD）**。
 
-text
+## 技术栈
+
+| 依赖 | 版本 |
+|------|------|
+| JDK | 25（预览特性 `--enable-preview`） |
+| Gradle | 9.5 |
+| Spring Boot | 4.1.0 |
+| Spring Cloud | 2025.1.1 |
+| Spring Cloud Alibaba | 2025.1.0.0 |
+| Spring Security | 7.1.0 |
+| Mybatis-Plus | 3.5.16 |
+| Querydsl | 5.1.0 |
+| MapStruct | 1.6.3 |
+| Lombok | 1.18.46 |
+| Record Builder | 52 |
+| Hutool | 5.8.44 |
+| Redisson | 4.3.1 |
+| Knife4j | 4.5.0 |
+| gRPC | 1.80.0 |
+| Protobuf | 4.35.0 |
+
+## 模块结构
+
+```
+taotao-cloud-sys/
+├── api/                  # RPC/gRPC 接口 + DTO + Protobuf 定义（纯接口，无业务依赖）
+├── application/          # 应用层：用例编排、事务、DTO转换、Handler
+│   ├── service/commad/   # 命令服务接口+实现
+│   ├── service/query/    # 查询服务接口+实现
+│   ├── dto/{biz}/        # Command / Query / Result DTO
+│   ├── repository/       # 查询仓储接口（读操作）
+│   ├── handler/          # 事件处理器
+│   ├── factory/          # 工厂
+│   ├── flow/             # 工作流编排
+│   └── shared/           # 共享模型（monitor/server/generator）
+├── assembly/             # 启动器 + 环境配置 + Docker/K8s
+│   └── src/test/         # 集成测试
+├── common/               # 公共模块（枚举、常量、工具、属性配置）
+│   ├── enums/            # 枚举（UserStatusEnum, FileTypeEnum, EnabledEnum...）
+│   ├── constant/         # 常量（SysConstants, PinyinConstants...）
+│   ├── properties/       # @ConfigurationProperties（SysProperties, GenProperties...）
+│   ├── info/             # 设置项定义（BaseSetting, SmsSetting, OssSetting...）
+│   ├── utils/            # 工具（DateUtils, BizParamUtils...）
+│   └── execption/        # 异常（SysException）
+├── domain/               # ★ 领域层（零外部依赖）
+│   ├── aggregate/        # 聚合根（DictAgg, UserAgg, DeptAgg, RoleAgg, FileAgg...）
+│   ├── entity/           # 实体（DictItem）
+│   ├── valobj/           # 值对象（IdsVal, IdPathVal）
+│   ├── event/            # 领域事件（DeptCreateEvent, AuthChangeEvent）
+│   ├── repository/       # 仓储接口
+│   ├── service/          # 领域服务（UserDomainService, DeptDomainService...）
+│   └── assembler/        # 领域 Assembler
+├── facade/               # 防腐层 ACL
+│   └── {biz}/            # 按外部服务分包（amap/weather/calendar/connect）
+│       ├── acl/          # 防腐适配实现
+│       ├── invoker/      # 远程调用
+│       └── interceptor/  # 拦截处理
+├── infrastructure/       # 基础设施层
+│   ├── persistent/       # 持久化
+│   │   ├── persistence/{biz}/  # JPA PO（DictPO, UserPO, FilePO...）
+│   │   ├── mapper/       # Mybatis-Plus Mapper
+│   │   └── repository/   # Spring Data Repository
+│   ├── repository/       # 仓储实现
+│   │   ├── domain/       # 领域仓储实现
+│   │   └── aplication/   # 查询仓储实现
+│   ├── event/            # 事件
+│   │   ├── publisher/    # 事件发布（Spring/Kafka/RocketMQ）
+│   │   ├── consumer/     # 消息消费（Kafka/RocketMQ）
+│   │   ├── subscribe/    # 事件订阅（Redis/Guava/GreenRobot）
+│   │   └── listener/     # Spring 事件监听
+│   ├── job/              # 定时任务
+│   ├── configuration/    # 配置（RocketMQ/Redisson/Stream）
+│   └── factory/          # 工厂
+└── interfaces/           # 接口层
+    ├── controller/       # REST Controller（按端分包）
+    │   ├── manager/      # 管理端 /manager/**
+    │   ├── seller/       # 商家端 /seller/**
+    │   ├── buyer/        # 买家端 /buyer/**
+    │   ├── inner/        # 内部调用 /inner/**
+    │   └── test/         # 测试接口
+    ├── rpc/              # Dubbo RPC 实现
+    └── grpc/             # gRPC 实现
+```
 
 ## DDD 核心原则
 
-### 1. 聚合设计原则
-- **原子性**: 聚合内保证事务一致性，聚合间使用最终一致性
-- **小聚合**: 一个聚合根只包含必要实体，避免性能问题
-- **ID引用**: 跨聚合通过ID引用，而非对象引用
-- **不变性**: 聚合根负责维护内部不变量
+### 分层依赖规则
+```
+api  ←  interfaces  ←  application  →  facade
+                          ↓
+                     domain  ←  infrastructure
+```
 
-```java
-// 聚合根示例
-@AggregateRoot
-@Entity
-@Table(name = "orders")
-public class Order {
-    @Id
-    private OrderId id;  // 值对象作为ID
-    
-    @Embedded
-    private CustomerId customerId;  // 跨聚合引用
-    
-    @OneToMany(cascade = CascadeType.ALL, fetch = FetchType.EAGER)
-    private List<OrderItem> items = new ArrayList<>();
-    
-    @Embedded
-    private Money totalAmount;
-    
-    private OrderStatus status;
-    
-    // 聚合根行为方法
-    public void addItem(ProductId productId, Money price, int quantity) {
-        // 业务规则校验
-        if (status != OrderStatus.PENDING) {
-            throw new DomainException("只能向待支付订单添加商品");
-        }
-        
-        OrderItem item = new OrderItem(productId, price, quantity);
-        items.add(item);
-        recalculateTotal();
-        
-        // 注册领域事件
-        registerEvent(new OrderItemAddedEvent(id, productId, quantity));
-    }
-    
-    public void pay() {
-        if (items.isEmpty()) {
-            throw new DomainException("空订单不能支付");
-        }
-        this.status = OrderStatus.PAID;
-        registerEvent(new OrderPaidEvent(id, totalAmount));
-    }
-    
-    private void recalculateTotal() {
-        this.totalAmount = items.stream()
-            .map(OrderItem::getSubtotal)
-            .reduce(Money.ZERO, Money::add);
-    }
-    
-    // 无参构造器（JPA要求）
-    protected Order() {}
-    
-    // 工厂方法
-    public static Order create(CustomerId customerId, Address shippingAddress) {
-        Order order = new Order();
-        order.id = new OrderId(IdGenerator.next());
-        order.customerId = customerId;
-        order.status = OrderStatus.PENDING;
-        order.registerEvent(new OrderCreatedEvent(order.id));
-        return order;
-    }
-}
-2. 值对象设计
-不可变性: 所有字段final，无setter方法
+- **domain**：零外部依赖（不依赖 Spring、框架、数据库）
+- **application**：依赖 domain，可依赖 facade 接口
+- **infrastructure**：依赖 domain（实现仓储），依赖 application（事件订阅）
+- **interfaces**：依赖 application，不直接依赖 infrastructure
+- **api**：纯接口 + DTO + Proto，不依赖任何业务模块
 
-无标识: 通过属性值判断相等性
+### 聚合设计
+- 聚合根命名以 `Agg` 后缀（`DictAgg`, `UserAgg`, `DeptAgg`）
+- 跨聚合通过 ID 引用（非对象引用）
+- 聚合内保证事务一致性，聚合间使用事件驱动最终一致性
+- 聚合内 `registerEvent()` 注册事件，仓储 `save()` 时自动 flush
 
-自验证: 构造时验证数据合法性
+### 值对象
+- 不可变：`final` 字段，无 setter 方法
+- 构造时自验证
+- 覆写 `equals()` / `hashCode()`（基于所有属性）
+- 位于 `domain/valobj/` 包
 
-java
-@ValueObject
-@Embeddable
-public class Money {
-    private final BigDecimal amount;
-    private final Currency currency;
-    
-    public Money(BigDecimal amount, Currency currency) {
-        if (amount == null || amount.compareTo(BigDecimal.ZERO) < 0) {
-            throw new DomainException("金额不能为负数");
-        }
-        this.amount = amount;
-        this.currency = currency;
-    }
-    
-    public Money add(Money other) {
-        if (!this.currency.equals(other.currency)) {
-            throw new DomainException("货币类型不匹配");
-        }
-        return new Money(this.amount.add(other.amount), this.currency);
-    }
-    
-    // 只有getter，无setter
-    public BigDecimal getAmount() { return amount; }
-    public Currency getCurrency() { return currency; }
-    
-    @Override
-    public boolean equals(Object o) {
-        if (this == o) return true;
-        if (!(o instanceof Money)) return false;
-        Money money = (Money) o;
-        return amount.compareTo(money.amount) == 0 &&
-               currency.equals(money.currency);
-    }
-    
-    @Override
-    public int hashCode() {
-        return Objects.hash(amount, currency);
-    }
-}
-3. 领域服务
-无状态: 不持有状态，只提供行为
+### 应用服务
+- **命令服务**（`service/commad/`）：写操作，`@Transactional`
+- **查询服务**（`service/query/`）：读操作，`@Transactional(readOnly = true)`
+- 禁止在 Application Service 中包含业务规则判断
+- 事务边界仅开在 application 层
 
-跨聚合: 协调多个聚合的业务逻辑
+### Controller
+- 按角色分包：`manager` / `seller` / `buyer` / `inner`
+- 只做 HTTP 解析 + 参数校验 + Result 封装
+- 禁止业务逻辑
+- Controller 继承 `BusinessController`
 
-业务价值: 不属于任何单一聚合
+## 命名约定
 
-java
-@DomainService
-@Service
-@Slf4j
-public class PricingService {
-    private final ProductRepository productRepository;
-    private final DiscountPolicy discountPolicy;
-    
-    public PricingService(ProductRepository productRepository, 
-                          DiscountPolicy discountPolicy) {
-        this.productRepository = productRepository;
-        this.discountPolicy = discountPolicy;
-    }
-    
-    /**
-     * 计算订单总价（跨聚合逻辑）
-     */
-    public Money calculateOrderPrice(Order order, CustomerType customerType) {
-        Money subtotal = Money.ZERO;
-        
-        for (OrderItem item : order.getItems()) {
-            Product product = productRepository.findById(item.getProductId())
-                .orElseThrow(() -> new DomainException("商品不存在"));
-            Money itemPrice = product.getPrice().multiply(item.getQuantity());
-            subtotal = subtotal.add(itemPrice);
-        }
-        
-        // 应用折扣策略
-        Money discount = discountPolicy.calculateDiscount(subtotal, customerType);
-        return subtotal.subtract(discount);
-    }
-}
-4. 仓储模式
-接口在领域层: 业务依赖抽象
+| 元素 | 格式 | 示例 |
+|------|------|------|
+| 聚合根 | `{Biz}Agg` | `DictAgg`, `UserAgg` |
+| 实体 | `{Name}` | `DictItem` |
+| 值对象 | `{Desc}Val` | `IdsVal`, `IdPathVal` |
+| 领域事件 | `{Biz}{Action}Event` | `DeptCreateEvent`, `AuthChangeEvent` |
+| 领域服务 | `{Biz}DomainService` | `UserDomainService` |
+| 仓储接口(domain) | `{Biz}DomainRepository` | `DictDomainRepository` |
+| 命令服务 | `{Biz}CommandService` | `DictCommandService` |
+| 查询服务 | `{Biz}QueryService` | `DictQueryService` |
+| 查询仓储 | `{Biz}QueryRepository` | `DictQueryRepository` |
+| PO | `{Biz}PO` | `DictPO`, `UserPO` |
+| Controller | `{Biz}{Role}Controller` | `DictManagerController` |
 
-实现在基础设施: 技术细节隔离
+## 常用命令
 
-java
-// 领域层接口
-public interface OrderRepository {
-    Order findById(OrderId id);
-    void save(Order order);
-    void delete(OrderId id);
-    Page<Order> findByCustomerId(CustomerId customerId, Pageable pageable);
-}
+```bash
+# 编译
+./gradlew build -x test
 
-// 基础设施层实现
-@Repository
-public class OrderRepositoryImpl implements OrderRepository {
-    private final JpaOrderRepository jpaRepository;
-    private final OrderMapper mapper;
-    
-    @Override
-    public Order findById(OrderId id) {
-        OrderPo orderPo = jpaRepository.findById(id.getValue())
-            .orElseThrow(() -> new DomainException("订单不存在"));
-        return mapper.toDomain(orderPo);
-    }
-    
-    @Override
-    public void save(Order order) {
-        OrderPo po = mapper.toPo(order);
-        jpaRepository.save(po);
-        
-        // 发布领域事件
-        order.getDomainEvents().forEach(this::publishEvent);
-        order.clearEvents();
-    }
-}
-5. 应用服务（用例编排）
-薄薄一层: 不包含业务逻辑
+# 本地启动 (dev 环境)
+./gradlew :taotao-cloud-sys-assembly:bootRun --args='--spring.profiles.active=dev'
 
-事务边界: 开启数据库事务
+# 运行测试
+./gradlew test
 
-协调作用: 调用领域层和基础设施
+# 运行指定模块测试
+./gradlew :taotao-cloud-sys-domain:test
 
-java
-@ApplicationService
-@Service
-@Transactional
-@Slf4j
-public class OrderApplicationService implements OrderUseCase {
-    private final OrderRepository orderRepository;
-    private final PricingService pricingService;
-    private final PaymentPort paymentPort;
-    private final DomainEventPublisher eventPublisher;
-    
-    @Override
-    public OrderDto createOrder(CreateOrderCommand command) {
-        log.info("Creating order for customer: {}", command.getCustomerId());
-        
-        // 1. 创建聚合（工厂）
-        Order order = Order.create(
-            new CustomerId(command.getCustomerId()),
-            command.getShippingAddress()
-        );
-        
-        // 2. 添加商品
-        for (OrderItemCommand item : command.getItems()) {
-            order.addItem(
-                new ProductId(item.getProductId()),
-                new Money(item.getPrice(), Currency.USD),
-                item.getQuantity()
-            );
-        }
-        
-        // 3. 应用领域服务计算价格
-        Money total = pricingService.calculateOrderPrice(
-            order, 
-            command.getCustomerType()
-        );
-        
-        // 4. 保存聚合
-        orderRepository.save(order);
-        
-        // 5. 发布领域事件
-        eventPublisher.publish(order.getDomainEvents());
-        
-        return OrderDto.fromDomain(order);
-    }
-}
-6. 领域事件
-解耦聚合: 聚合间通过事件通信
+# 代码质量检查
+./gradlew checkstyleMain spotlessCheck pmdMain spotbugsMain
 
-最终一致性: 使用事件处理器实现
+# 代码格式化
+./gradlew spotlessApply
 
-java
-@DomainEvent
-public class OrderPaidEvent extends DomainEvent {
-    private final OrderId orderId;
-    private final Money amount;
-    private final LocalDateTime paidAt;
-    
-    public OrderPaidEvent(OrderId orderId, Money amount) {
-        this.orderId = orderId;
-        this.amount = amount;
-        this.paidAt = LocalDateTime.now();
-    }
-    
-    // Getters...
-}
+# 发布到本地仓库
+./gradlew publishToMavenLocal
 
-// 事件处理器
-@Component
-@Slf4j
-public class OrderEventHandler {
-    @EventListener
-    @Async
-    @Transactional(propagation = Propagation.REQUIRES_NEW)
-    public void handleOrderPaid(OrderPaidEvent event) {
-        log.info("Order paid: {}, amount: {}", event.getOrderId(), event.getAmount());
-        // 发送通知、更新统计等
-    }
-}
-开发流程规范
-1. 战略设计阶段
-事件风暴: 识别领域事件、命令、聚合
+# JaCoCo 覆盖率报告
+./gradlew jacocoTestReport
+```
 
-限界上下文: 划分业务边界
+## 业务领域
 
-上下文映射: 定义上下文关系
+| 业务 | 聚合根 | 说明 |
+|------|--------|------|
+| 用户 | `UserAgg` | 系统用户账号 |
+| 角色 | `RoleAgg` | RBAC 角色定义 |
+| 权限 | `PermissionAgg` | 权限资源管理 |
+| 部门 | `DeptAgg` | 组织架构树 |
+| 组织 | `OrgAgg` | 机构管理 |
+| 岗位 | `PositionAgg` | 岗位定义 |
+| 字典 | `DictAgg` + `DictItem` | 数据字典 |
+| 文件 | `FileAgg` + `FileLogAgg` | 文件存储 |
+| 区域 | Region | 行政区划 |
+| 配置 | Setting | 系统设置（OSS/短信/支付等） |
+| 日志 | Log/OperateLog/LoginLog/SysLog | 审计日志 |
+| 国际化 | I18nData | 多语言 |
+| 敏感词 | SensitiveWord | 过滤 |
+| 拼音 | Pinyin | 汉字转拼音 |
 
-2. 战术设计阶段
-识别聚合根和值对象
+## 反模式（严禁）
 
-定义领域服务和仓储接口
+- Controller 中写业务逻辑
+- 聚合根中注入 Repository 或 Domain Service
+- 值对象中包含业务行为以外的逻辑
+- Application Service 中包含业务规则判断
+- 跨聚合直接操作其他聚合的内部状态
+- Application Service 直接调用 Mapper/Repository
+- 领域模型与持久化模型混用（domain entity ≠ PO）
 
-编写领域模型测试
+## 项目特有约定
 
-实现应用服务和REST API
-
-3. 代码审查要点
-聚合是否保证了业务不变性
-
-值对象是否不可变
-
-仓储接口是否在领域层
-
-跨聚合是否通过ID引用
-
-领域事件是否实现最终一致性
-
-测试策略
-单元测试（领域层）
-java
-@Test
-class OrderTest {
-    @Test
-    void shouldAddItemToPendingOrder() {
-        Order order = Order.create(customerId, address);
-        order.addItem(productId, new Money(100), 2);
-        
-        assertThat(order.getTotalAmount()).isEqualTo(new Money(200));
-        assertThat(order.getDomainEvents()).hasSize(2);
-    }
-}
-集成测试（应用层）
-java
-@SpringBootTest
-@Transactional
-class OrderApplicationServiceTest {
-    @Test
-    void shouldCreateOrder() {
-        CreateOrderCommand command = createCommand();
-        OrderDto result = orderService.createOrder(command);
-        
-        assertThat(result.getId()).isNotNull();
-        assertThat(result.getStatus()).isEqualTo(OrderStatus.PENDING);
-    }
-}
-命名约定
-聚合根: 业务名词（Order, Product, User）
-
-值对象: 描述性名词（Money, Address, Email）
-
-领域服务: 动词+名词（PricingService, ShippingService）
-
-领域事件: 名词+过去式动词（OrderCreatedEvent, UserRegisteredEvent）
-
-仓储接口: 聚合根名+Repository（OrderRepository）
-
-应用服务: 聚合根名+ApplicationService（OrderApplicationService）
-
-重要提醒
-严禁在聚合根中注入仓储或领域服务
-
-严禁在值对象中添加业务行为以外的逻辑
-
-跨聚合操作必须通过应用服务协调
-
-数据库事务只能开启在应用层
-
-领域模型必须与持久化模型分离
+- **`@TaoTaoBootApplication`**：自定义组合注解，替代 `@SpringBootApplication`
+- **`StartupSpringApplication`**：自定义启动器包装类
+- **双仓储体系**：`domain/repository/`（领域仓储接口）+ `application/repository/`（查询仓储接口）
+- **MapStruct + Record Builder + Lombok**：三件套减少样板代码
+- **多事件总线**：Spring Event / Kafka / RocketMQ / Redis / Guava / GreenRobot
+- **代码质量门禁**：Checkstyle + SpotBugs + PMD + Spotless + OWASP + JaCoCo
+- **JDK 25 预览特性**：`--enable-preview` + 大量 `--add-opens` / `--add-exports`
